--- a/_config.yml
+++ b/_config.yml
@@ -22,6 +22,10 @@ speakers:
     machine_name: martin_bosslet
     title: Independent developer
     twitter: _emboss_
+  - name: Roger Wang
+    machine_name: roger_wang
+    title: Creator and maintainer, node-webkit project
+    twitter: wwr
   - name: Tom Ashworth
     machine_name: tom_ashworth
     title: Front-end engineer, Twitter
