--- a/_config.yml
+++ b/_config.yml
@@ -71,3 +71,6 @@ sponsors:
     - name: Digital Ocean
       logo: logo-sponsor-digitalocean.png
       url: https://www.digitalocean.com
+    - name: Sauce Labs
+      logo: logo-sponsor-saucelabs.png
+      url: https://saucelabs.com/
