Added Angie Maguire

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,10 @@ speakers:
     machine_name: addy_osmani
     title: Senior Engineer In Developer Relations, Google
     twitter: addyosmani
+  - name: Angie Maguire
+    machine_name: angie_maguire
+    title: Head of Communications, Mint Digital and Founder, Ladies Who Code
+    twitter: lalamaguire
   - name: Brittany Storoz
     machine_name: brittany_storoz
     title: Interactive Developer, New York Times
