--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,10 @@ speakers:
     machine_name: feross_aboukhadijeh
     title: Mad scientist, PeerCDN
     twitter: feross
+  - name: Jonathan Lipps
+    machine_name: jonathan_lipps
+    title: Director of Ecosystem & Integrations / Sauce Labs
+    twitter: jlipps
   - name: Martin Boßlet
     machine_name: martin_bosslet
     title: Independent developer
