--- a/_config.yml
+++ b/_config.yml
@@ -62,6 +62,10 @@ speakers:
     machine_name: soledad_penades
     title: Senior HTML5 Engineer
     twitter: supersole
+  - name: Tancredi Trugenberger
+    machine_name: tancredi_trugenberger
+    title: Web Lead @ Kano
+    twitter: tancdev
   - name: Tim Park
     machine_name: tim_park
     title: Open platforms and Internet of Things, Microsoft
