Added Alan Shaw

--- a/_config.yml
+++ b/_config.yml
@@ -18,6 +18,10 @@ speakers:
     machine_name: addy_osmani
     title: Senior Engineer In Developer Relations, Google
     twitter: addyosmani
+  - name: Alan Shaw
+    machine_name: alan_shaw
+    title: Node.js web developer
+    twitter: _alanshaw
   - name: Angie Maguire
     machine_name: angie_maguire
     title: Head of Communications, Mint Digital and Founder, Ladies Who Code
