--- a/_config.yml
+++ b/_config.yml
@@ -106,6 +106,9 @@ sponsors:
     - name: Digital Ocean
       logo: logo-sponsor-digitalocean.png
       url: https://www.digitalocean.com
+    - name: MongoDB
+      logo: logo-sponsor-mongodb.png
+      url: http://www.mongodb.org/
     - name: Sauce Labs
       logo: logo-sponsor-saucelabs.png
       url: https://saucelabs.com/
