--- a/_config.yml
+++ b/_config.yml
@@ -120,6 +120,9 @@ sponsors:
       logo: logo-sponsor-oreilly.png
       url: http://www.oreilly.com/
   thankyou:
+    - name: Google
+      logo: logo-sponsor-google.png
+      url: http://google.com/
     - name: we are one
       logo: logo-sponsor-weareone.png
       url: http://weareone.pt/
