--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,10 @@ speakers:
     machine_name: jonathan_lipps
     title: Director of Ecosystem & Integrations / Sauce Labs
     twitter: jlipps
+  - name: Jonathan Ong
+    machine_name: jonathan_ong
+    title: Independent Developer
+    twitter: jongleberry
   - name: Julian Grubber
     machine_name: julian_grubber
     title: Software Engineer
