--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,10 @@ speakers:
     machine_name: feross_aboukhadijeh
     title: Mad scientist, PeerCDN
     twitter: feross
+  - name: Jérome Loï
+    machine_name: jerome_loi
+    title: Friend of the NodeBots, Paris NodeBots organiser
+    twitter: gorhgorh
   - name: Jonathan Lipps
     machine_name: jonathan_lipps
     title: Director of Ecosystem & Integrations / Sauce Labs
