--- a/_config.yml
+++ b/_config.yml
@@ -148,6 +148,9 @@ sponsors:
     - name: O'Reilly Media
       logo: logo-sponsor-oreilly.png
       url: http://www.oreilly.com/
+    - name: Pearson
+      logo: logo-sponsor-pearson.png
+      url: http://www.pearson.com/
   thankyou:
     - name: Google
       logo: logo-sponsor-google.png
