--- a/_config.yml
+++ b/_config.yml
@@ -142,6 +142,9 @@ sponsors:
     - name: Digital Ocean
       logo: logo-sponsor-digitalocean.png
       url: https://www.digitalocean.com
+    - name: Gitter
+      logo: logo-sponsor-gitter.png
+      url: https://gitter.im/
     - name: MongoDB
       logo: logo-sponsor-mongodb.png
       url: http://www.mongodb.org/
