Added YLD! and Observador

--- a/_config.yml
+++ b/_config.yml
@@ -167,6 +167,12 @@ sponsors:
     - name: Google
       logo: logo-sponsor-google.png
       url: http://google.com/
+    - name: Observador
+      logo: logo-sponsor-observador.png
+      url: http://observador.pt/
     - name: we are one
       logo: logo-sponsor-weareone.png
       url: http://weareone.pt/
+    - name: YLD!
+      logo: logo-sponsor-yld.png
+      url: http://yld.io/
