Added Walmart Labs

--- a/_config.yml
+++ b/_config.yml
@@ -160,6 +160,9 @@ sponsors:
     - name: Pearson
       logo: logo-sponsor-pearson.png
       url: http://www.pearson.com/
+    - name: Walmart Labs
+      logo: logo-sponsor-walmartlabs.png
+      url: http://www.walmartlabs.com/
   thankyou:
     - name: Cloudup
       logo: logo-sponsor-cloudup.png
